--- a/app/views/comment_templates/index.html.erb
+++ b/app/views/comment_templates/index.html.erb
@@ -68,7 +68,7 @@
 
         <!-- Display comment.commentor_id start -->
         <td>
-          <%= comment.commentor_id %>
+          <%= comment.commentor.created_at %>
         </td>
         <!-- Display comment.commentor_id end -->
 
