--- a/app/views/race_templates/index.html.erb
+++ b/app/views/race_templates/index.html.erb
@@ -72,7 +72,7 @@
 
         <!-- Display race.event_id start -->
         <td>
-          <%= race.event_id %>
+          <%= race.event.distance_id %>
         </td>
         <!-- Display race.event_id end -->
 
