--- a/app/views/result_templates/index.html.erb
+++ b/app/views/result_templates/index.html.erb
@@ -74,7 +74,7 @@
 
         <!-- Display result.user_id start -->
         <td>
-          <%= result.user_id %>
+          <%= result.user.created_at %>
         </td>
         <!-- Display result.user_id end -->
 
