--- a/app/views/comment_templates/new_form_with_errors.html.erb
+++ b/app/views/comment_templates/new_form_with_errors.html.erb
@@ -51,7 +51,7 @@
     </label>
 
     <!-- Input for result_id start -->
-    <input type="text" id="result_id" name="result_id" class="form-control" value="<%= @comment.result_id %>">
+    <%= select_tag(:result_id, options_from_collection_for_select(Result.all, :id, :user_id, @comment.result_id), :class => "form-control") %>
     <!-- Input for result_id end -->
   </div>
   <!-- Label and input for result_id end -->
