Replace raw foreign key value in results with primary descriptors

--- a/app/views/result_templates/index.html.erb
+++ b/app/views/result_templates/index.html.erb
@@ -80,7 +80,7 @@
 
         <!-- Display result.race_id start -->
         <td>
-          <%= result.race_id %>
+          <%= result.race.name %>
         </td>
         <!-- Display result.race_id end -->
 
