--- a/app/views/comment_templates/index.html.erb
+++ b/app/views/comment_templates/index.html.erb
@@ -74,7 +74,7 @@
 
         <!-- Display comment.result_id start -->
         <td>
-          <%= comment.result_id %>
+          <%= comment.result.user_id %>
         </td>
         <!-- Display comment.result_id end -->
 
