--- a/app/views/race_templates/index.html.erb
+++ b/app/views/race_templates/index.html.erb
@@ -76,7 +76,11 @@
 
         <!-- Display race.event_id start -->
         <td>
-          <%= race.event.distance_id %>
+          <% if race.event.present? %>
+            <a href="/events/<%= race.event.id %>">
+              <%= race.event.distance_id %>
+            </a>
+          <% end %>
         </td>
         <!-- Display race.event_id end -->
 
